# vrgineers

./: .gitignore  CMakeLists.txt  main.cpp
RAW/: cockpit-dark_left.png.pp3  cockpit_dark_left.png.pp3  display-text-light_left.png.pp3
experiments/: experiments.py  fft.ipynb  imglib.py  misc.ipynb  noise.ipynb
glad/include/glad/: glad.h
glad/src/: glad.c
glsl/: bilinear-no-extreme-iterative.glsl  bilinear-no-extreme-uniform.glsl  bilinear-no-extreme.glsl  bilinear.glsl  chromaDenoise.glsl  colorCorrect.glsl  colorLuminance.glsl  coloring.glsl  denoise-contrast.glsl  denoise.glsl  denoise2.glsl  denoiseNew.glsl  denoiseValue.glsl  edge-detection.glsl  green-only-no-extreme.glsl  green-only.glsl  iterative-debayer-inverse.glsl  iterative-debayer.glsl  laplacian.glsl  ltoRGB.glsl  lumDenoise.glsl  nearest.glsl  new-debayer.glsl  variance.glsl
lib/CImg/: CImg.h
modules/: glfw-utils.cpp  glfw-utils.h  image-utils.cpp  image-utils.h
